tests/ui/invalid_pymethods_warn.stderr
error: __traverse__ cannot be used with #[pyo3(warn)] nor #[pyo3(deprecated)]
 --> tests/ui/invalid_pymethods_warn.rs:8:12
  |
8 |     #[pyo3(warn(message = "warn on __traverse__"))]
  |            ^^^^

error: #[classattr] cannot be used with #[pyo3(warn)] nor #[pyo3(deprecated)]
  --> tests/ui/invalid_pymethods_warn.rs:15:12
   |
15 |     #[pyo3(warn(message = "warn for class attr"))]
   |            ^^^^
